Number button presses working with a bug. Clicks don't always register on display. Display is 2 clicks behind

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     padding: 100px, 50px;
     max-width: 400px;
     height: 30px;
-    text-align: right;
+    text-align: center;
     line-height: 30px;
 }
 
